Fix horizontal scroll/vertical scroll

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ div.scrollmenu {
 }
 
 div.scrollmenu a {
-    padding: 14px;
+    padding: 5px 14px 5px 14px;
 }
 
 /* ---------------------------------------------------
